# netmapv2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agent/rules/: project-context.md
app/: database.py  main.py
app/api/: audit.py  auth.py  diagnostics.py  export.py  floors.py  nodes.py  ocs.py  users.py
app/core/: deps.py  security.py
app/models/: __init__.py  floor.py  node.py  user.py
app/repository/: user_repository.py
app/schemas/: user.py
app/services/: inventory.py  ocs.py
docs/: database_architecture.md
keys/: README.md
scripts/: add_assigned_to_column.py  add_details_column.py  debug_ocs.py  entrypoint.sh  fix_sequence.py  init_db.py  migrate_assigned_to.py  migrate_floors.py  migrate_point_number.py  migrate_user_table.py  seed_admin.py  seed_initial.py  wait_for_db.py
static/: index.html  login.html
static/assets/floors/: .gitkeep
tunnel/: Dockerfile  entrypoint.sh
