[project]
name = "netmap"
version = "0.1.0"
description = "Netmap Application - Network Mapping and Management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "geoalchemy2>=0.15.0",
    "shapely>=2.0.3",
    "pillow>=10.3.0",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
